layout CSS polish, nicer flash messages, IE fixes
 - flash messages are now closer to main content: below navigation bar
 - fix floats and margins in header, footer for IE
 - style all buttons with pure CSS
 - start using constants for colors in Sass
 - nicer margins, padding in activities
 - don't center the "Show more" button in timeline
 - make Teambox logo a real image, not CSS background

--- a/app/styles/_actions_menu.sass
+++ b/app/styles/_actions_menu.sass
@@ -31,7 +31,7 @@
       padding: 3px 5px
       font-weight: normal
       &:hover
-        background: #78ACD7
+        background: $navbar
         text-decoration: none
         cursor: pointer
     .tactione
