--- a/app/styles/_activities.sass
+++ b/app/styles/_activities.sass
@@ -1,9 +1,10 @@
 .activity
-  padding: 2px
-  margin: 15px 0px
+  padding: .3em .6em
+  margin: .5em 0px
   font-size: 12px
-  background-color: #fff9da
-  border: solid 1px #fff3b9
+  background-color: $highlight
+  border: 1px solid $highlight - 20
+  +rounded(3px)
   +clearing
   p
     margin: 0
