--- a/app/styles/_projects.sass
+++ b/app/styles/_projects.sass
@@ -120,9 +120,7 @@
     .submit
       text-align: right
   .column
-    -moz-border-radius:
-      topleft: 5px
-    -webkit-border-top-left-radius: 5px
+    +rounded(5px)
   .owner
     margin-bottom: 20px
     .description
