--- a/app/styles/_shared.sass
+++ b/app/styles/_shared.sass
@@ -40,7 +40,7 @@
     clear: both
   * html &
     height: 1px
-  *:first-child + html
+  *:first-child + html &
     overflow: hidden
     
 =small_caps
