--- a/app/views/shared/_footer.haml
+++ b/app/views/shared/_footer.haml
@@ -1,9 +1,9 @@
-.footer
-  %span
-    &copy; 2010
-  = link_to 'Teambox', 'http://www.teambox.com'
-  .right
-    = support_link
-    = mobile_link
-    = help_link
+#footer
+  %ol.support
+    %li= support_link
+    %li= mobile_link
+    %li= help_link
+  .copyright
+    Copyright &copy; 2010
+    = link_to 'Teambox', 'http://www.teambox.com'
 
