--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -1,7 +1,5 @@
 .header
-  %h1
-    - header_group = (@current_project ? @current_project.group : nil) || @group
-    - if header_group and header_group.has_logo?
-      = link_to '<span>Teambox</span>', root_path, :tabindex => 1, :style => "background-image:url(#{header_group.logo.url(:top)})"
-    - else
-      = link_to '<span>Teambox</span>', root_path, :tabindex => 1
+  %h1= link_to image_tag(logo_image, :alt => "Teambox"), root_path
+  
+  - unless request.format == :m
+    = render 'shared/global_navigation'
