--- a/app/styles/_layout.sass
+++ b/app/styles/_layout.sass
@@ -8,6 +8,7 @@ div.wrapper
   clear: both
   background: white
   +rounded(5px)
+  +clearing
 
 div.content_wrap
   float: left
@@ -47,25 +48,47 @@ div.clear
 @import header
 @import navigation
 
-div.footer
+$error = lighten(desaturate(red, 50%), 15)
+$success = lighten(desaturate(green, 80%), 30%)
+
+p.flash
+  font:
+    size: 14px
+    weight: bold
+  margin: .3em 0
+  padding: .3em 1em
+  +rounded(4px)
+  background: #aaa
+  border: 1px solid #aaa
+  text-shadow: rgba(black, .3) 1px 1px 1px
+p.flash-error
+  background: $error
+  border-color: $error - 20
+  color: white
+p.flash-success
+  background: $success
+  border-color: $success - 20
+  color: white
+p.flash-notice
+  background: $highlight
+  color: darken($highlight, 65%)
+  border-color: $highlight - 20
+  text-shadow: none
+
+#footer
   clear: both
-  padding:
-    top: 5px
-    bottom: 30px
+  font-size: 11px
+  margin-top: 2em
+  border-top: 1px solid #ccc
+  padding: .5em 0 2em 0
   color: #8c8c8c
-  font-size: 10px
-  margin-top: 20px
   text-transform: uppercase
-  border-top: 1px solid #eeeeee
-  p
-    margin: 0px
-  a
-    color: rgb(140, 140, 140)
-    font-size: 10px
-    padding-left: 20px
-  img
-    vertical-align: bottom
-  span
-    vertical-align: bottom
-  .right
+  .support
+    list-style: none
     float: right
+    margin: 0
+    padding: 0
+    text-align: right
+    li
+      display: inline
+      margin-left: 1em
