--- a/app/styles/_navigation.sass
+++ b/app/styles/_navigation.sass
@@ -1,7 +1,7 @@
 .global_navigation
   float: right
-  padding: 5px
-  margin-bottom: 0 0 10px 0
+  padding: 0
+  margin: 12px 0 0 0
   list-style-type: none
   font-size: 11px
   li
@@ -41,7 +41,7 @@ div.navigation
       text-decoration: underline
     a.active
       color: white
-      background: #78acd7
+      background: $navbar
     img.triangle
       padding-bottom: 2px
   li.welcome, li.new
@@ -55,8 +55,9 @@ div.navigation
     a:hover
       color: rgb(43, 43, 43)
       background: rgb(211, 209, 209)
+
 div.project_navigation
-  background: #78acd7
+  background: $navbar
   +rounded(5px)
   padding: 5px 10px
   ul
