--- a/app/styles/_users.sass
+++ b/app/styles/_users.sass
@@ -152,12 +152,8 @@ div.upload_avatar
     .profile
       margin-bottom: 20px
   .banner
-    -moz-border-radius:
-      topleft: 5px
-      topright: 5px
-    -webkit-border-top-left-radius: 5px
-    -webkit-border-top-right-radius: 5px
-    background: #78acd7
+    +rounded(5px)
+    background: $navbar
     padding: 8px
     h2
       border: none
