--- a/app/styles/mobile.sass
+++ b/app/styles/mobile.sass
@@ -399,7 +399,7 @@ div.task_list, div.task_list_closed
       padding: 3px 5px
       font-weight: normal
       &:hover
-        background: #78ACD7
+        background: $navbar
         text-decoration: none
         cursor: pointer
     .tactione
