--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -18,23 +18,25 @@
     = javascript_include_tag 'modernizr'
     = strip(@current_project)
     .container
-      = header
-      = render 'shared/global_navigation'
-      - show_flash
+      = render 'shared/header'
       = navigation(@current_project,current_user.projects,current_user.recent_projects)
       .wrapper
         - unless location_name?(['welcome_users','new_projects','show_users','edit_users','new_avatars','index_invitations'])
-          = project_navigation(@current_project)
-        - if @content_for_banner
-          .banner
-            = yield :banner
-        %div{ :class => @content_for_column.nil? ? 'content_wrap_single' : 'content_wrap' }
-          .content#content
-            = yield
-        - if @content_for_column
+          = render 'shared/project_navigation', :project => @current_project
+          
+        - show_flash
+        
+        - if yield :banner
+          .banner= yield :banner
+        
+        - content_for_column = yield :column
+        %div{ :class => content_for_column.blank? ? 'content_wrap_single' : 'content_wrap' }
+          .content#content= yield
+        
+        - unless content_for_column.blank?
           .column_wrap
-            .column#column
-              = yield :column
-          .clear
+            .column#column= content_for_column
+
       = footer
+
     = javascripts
