--- a/app/views/people/_header.haml
+++ b/app/views/people/_header.haml
@@ -1,13 +1,14 @@
-.person_header{ :id => "#{person_id(:edit_header,project,person)}" }
+.person_header
   .name
-    %h2
-      = user_link(person.user)
-      = "@#{person.user.login}"
-    %p  
-      %strong
-        = person_role(project,person)
+    %h2== #{user_link(person.user)} @#{person.user.login}
     %p
-      = time_ago_in_words(person.user.updated_at)
-  .actions
-    = person_link(project,person)
-    = remove_person_link(project,person,current_user)
+      %strong= t(person.owner?? '.owner' : ".#{person.role_name}")
+      
+    %p= time_ago_in_words(person.user.updated_at)
+  
+  - unless request.format == :m or person.user == current_user
+    .actions
+      = link_to t('people.link.edit'), '#edit'
+      - unless project.owner?(person.user)
+        = link_to t('people.header.remove'), project_person_path(project, person, :anchor => 'destroy'),
+          'data-confirm' => t('people.header.confirm_delete')
