--- a/app/styles/_buttons.sass
+++ b/app/styles/_buttons.sass
@@ -52,3 +52,19 @@ a.add_button, a.new_task_list_link
     padding-left: 20px
     span
       background: url(/images/button_wrap_bg.jpg) no-repeat right
+
+=button
+  display: inline-block
+  +rounded(4px)
+  background-color: $navbar
+  +gradient-top(rgba(white, .2))
+  font-size: 12px
+  font-weight: bold
+  color: white
+  text-shadow: rgba(black, .2) 1px 1px 1px
+  text-decoration: none
+  text-align: center
+  padding: .15em .4em
+  &:hover, &:active, &:visited
+    color: white
+    text-decoration: none
