--- a/app/views/people/_person.m.haml
+++ b/app/views/people/_person.m.haml
@@ -1,4 +1,4 @@
-.person{ :id => person_id(:item,project,person) }
+%div[person]
   = thumb_avatar(person.user)
-  = person_header(project,person)
+  = render 'header', :person => person, :project => project
   .clear
