--- a/app/views/people/index.m.haml
+++ b/app/views/people/index.m.haml
@@ -3,4 +3,4 @@
   = invite_form(@current_project,Invitation.new)
   #people
     = list_invitations_for_project(@current_project,@invitations)
-    = list_people(@current_project,@people)
+    = render @people, :project => @current_project
