--- a/app/views/people/_header.haml
+++ b/app/views/people/_header.haml
@@ -6,7 +6,7 @@
       
     %p= time_ago_in_words(person.user.updated_at)
   
-  - unless request.format == :m or person.user == current_user
+  - if request.format != :m and project.admin?(current_user) and person.user != current_user
     .actions
       = link_to t('people.link.edit'), '#edit'
       - unless project.owner?(person.user)
