put Sass constants in "shared" and include it in mobile stylesheet

--- a/app/styles/_layout.sass
+++ b/app/styles/_layout.sass
@@ -48,8 +48,8 @@ div.clear
 @import header
 @import navigation
 
-$error = lighten(desaturate(red, 50%), 15)
-$success = lighten(desaturate(green, 80%), 30%)
+$error: lighten(desaturate(red, 50%), 15)
+$success: lighten(desaturate(green, 80%), 30%)
 
 p.flash
   font:
