--- a/app/views/layouts/application.m.haml
+++ b/app/views/layouts/application.m.haml
@@ -16,4 +16,4 @@
     = yield
   #footer
     =# link_to "Use full Teambox", root_path
-    = link_to "Log out", logout_path
+    = link_to t('shared.global_navigation.logout'), logout_path
