--- a/app/views/uploads/_page_upload.haml
+++ b/app/views/uploads/_page_upload.haml
@@ -2,6 +2,6 @@
   .upload_area{}
     = cancel_page_upload_link
     %h3#upload_header
-      Upload
+      =t('uploads.new.select_a_file')
     %iframe.upload_form#upload_form{:src => page_upload_url_for(@page) + "?iframe=true&{POS}", :scrolling => 'no', :frameborder => 0}
       &nbsp;
