--- a/app/views/shared/_project_navigation.html.erb
+++ b/app/views/shared/_project_navigation.html.erb
@@ -25,6 +25,14 @@ render_tabnav :project do
        t.highlights_on :controller => :task_lists, :action => :index
       end
 
+      if time_tracking_enabled?
+        add_tab do |t|
+          t.named t('.time_tracking')
+          t.links_to time_path
+          t.highlights_on :controller => :hours, :action => :index
+        end
+      end
+
       if groups_enabled?
         add_tab do |t|
          t.named t('.groups')
