Proper highlighting for navigation bar elements

--- a/app/styles/_navigation.sass
+++ b/app/styles/_navigation.sass
@@ -46,7 +46,7 @@ div.navigation
       padding-bottom: 2px
   li.welcome, li.new
     a.active
-      background: rgb(255, 255, 255)
+      background: $navbar
   li.button
     a
       font-size: 14px
@@ -59,7 +59,7 @@ div.navigation
 div.project_navigation
   background: $navbar
   +rounded(5px)
-  padding: 5px 10px
+  padding: 4px 10px
   ul
     margin: 0px
     padding: 0px
