--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -22,9 +22,7 @@
       = render 'shared/header'
       = navigation(@current_project,current_user.projects,current_user.recent_projects)
       .wrapper
-        - unless location_name?(['welcome_users','new_projects','show_users','edit_users','new_avatars','index_invitations'])
-          = render 'shared/project_navigation', :project => @current_project
-          
+        = project_navigation(@current_project)
         - show_flash
         
         - if yield :banner
