--- a/app/styles/_typography.sass
+++ b/app/styles/_typography.sass
@@ -39,6 +39,12 @@ h2
   div.column &
     border-bottom: solid 1px rgb(200, 200, 200)
 
+textarea
+  font: 1em $typeface
+
+textarea.placeholder, input.placeholder
+  color: lighten($text, 30%) !important
+
 .textilized
   font-size: 12px
   color: rgb(60, 60, 60)
