--- a/app/styles/_shared.sass
+++ b/app/styles/_shared.sass
@@ -1,7 +1,7 @@
 $highlight: #fff9da
 $navbar: #78acd7
 $text: #333
-$typeface: "Lucida Grande", "Lucida Sans Unicode", "Helvetica Neue", Helvetica, Arial, Verdana, sans-serif
+$typeface: "Lucida Grande", Helvetica, "Helvetica Neue", Arial, Verdana, sans-serif
 
 =rounded($n)
   border-radius: $n
