Autorefresh for Project#show
Introduced a little bug, which makes it possible for comments to be displayed twice in the timeline.
Polling will soon be replaced for a smarter way of refreshing the timeline with HTTP Push, so we can live with this.

--- a/app/views/projects/show.haml
+++ b/app/views/projects/show.haml
@@ -13,6 +13,7 @@
 #activities
   = list_activities(@activities)
   = show_more_button(@activities)
+= javascript_tag autorefresh(@activities, @current_project)
   
 - content_for :column do
   .project_name= @current_project.name
