--- a/app/views/shared/_user_navigation.erb
+++ b/app/views/shared/_user_navigation.erb
@@ -4,24 +4,30 @@ render_tabnav :user do
       t.named t('.account_settings')
       t.links_to account_settings_path
       t.highlights_on :controller => 'users', :action => 'edit', :sub_action => 'settings'
-    end  
+    end
 
     add_tab do |t|
       t.named t('.profile_information')
       t.links_to account_profile_path
       t.highlights_on :controller => 'users', :action => 'edit', :sub_action => 'profile'
     end
-        
+
     add_tab do |t|
       t.named t('.profile_picture')
       t.links_to account_picture_path
       t.highlights_on :controller => 'users', :action => 'edit', :sub_action => 'picture'
     end
-    
+
     add_tab do |t|
       t.named t('.notifications')
       t.links_to account_notifications_path
       t.highlights_on :controller => 'users', :action => 'edit', :sub_action => 'notifications'
-    end    
+    end
+
+    add_tab do |t|
+      t.named t('.delete_account')
+      t.links_to account_delete_path
+      t.highlights_on :controller => 'users', :action => 'edit', :sub_action => 'delete'
+    end
 end
 %><div class="clear"></div></div>
