optional secure logins, signups, and edit password form over HTTPS

--- a/app/views/users/edit.haml
+++ b/app/views/users/edit.haml
@@ -3,7 +3,10 @@
 
 %h2= t(".title_#{@sub_action}")
 
-- form_for current_user, :html => { :multipart => true } do |form|
+- secure_post = @sub_action == 'settings' && Teambox.config.secure_logins
+- secure_url = secure_post ? polymorphic_url(current_user, :protocol => 'https') : nil
+
+- form_for current_user, :url => secure_url, :html => { :multipart => true } do |form|
   = form.error_messages
   = render form
   - unless @sub_action == 'delete'
