user profile page: changed heading appearance to distinguish from navigation

--- a/app/styles/_users.sass
+++ b/app/styles/_users.sass
@@ -155,20 +155,16 @@ div.upload_avatar
     .profile
       margin-bottom: 20px
   .banner
-    +rounded(5px)
-    background: $navbar
-    padding: 8px
+    background: #eee
+    margin-top: 10px
+    padding: .3em 10px
     h2
-      border: none
       margin: 0
-      padding-left: 5px
+      padding: 0
+      border: none
       span.login
-        color: #333333
-        margin-left: 5px
-        padding: 5px
         font-size: 14px
-        -moz-border-radius: 5px
-        -webkit-border-radius: 5px
+        padding-top: .2em
   .content_wrap
     float: right
     padding: 10px
