Subscribe to calendars page

--- a/app/views/projects/show.haml
+++ b/app/views/projects/show.haml
@@ -26,5 +26,5 @@
     .tip
       = t('.tip')
   = instructions_for_feeds
-  = subscribe_to_calendar_link(@current_project)
+  = instructions_for_calendars
   = #print_project_link(@current_project)
