You can now subscribe to Calendars showing only your tasks

--- a/app/styles/_projects.sass
+++ b/app/styles/_projects.sass
@@ -48,6 +48,11 @@
       font-size: 13px
       padding-left: 25px
       background: url(/images/calendar_date_select/calendar.gif) no-repeat left
+  .calendar_links
+    font-size: 13px
+    padding-left: 25px
+    margin: 8px 0
+    background: url(/images/calendar_date_select/calendar.gif) no-repeat left
   .print
     margin-top: 5px
     a
