Wrong link in the sidebar

--- a/app/views/task_lists/_column.haml
+++ b/app/views/task_lists/_column.haml
@@ -23,5 +23,5 @@
 = banner(@events,@chart)
 
 %h2= t('.other_views')
-= subscribe_to_calendar_link(project)
+= instructions_for_calendars
 = print_task_lists_link(project)
