--- a/app/views/activities/_create_task_list.m.haml
+++ b/app/views/activities/_create_task_list.m.haml
@@ -3,8 +3,8 @@
   .container
     %span.user= activity.user.short_name
     = t(".#{activity.action_type}")
-    = activity_project_link(activity.project,:after)
     = link_to task_list, project_task_list_path(task_list.project, task_list)
+    = activity_project_link(activity.project)
     .date
       = posted_date activity.posted_date
   .clear
