--- a/app/views/activities/_create_upload.haml
+++ b/app/views/activities/_create_upload.haml
@@ -5,7 +5,9 @@
     .filename.show_details
       - unless rss?
         .date= posted_date upload.created_at
-      %p.name= activity_title(activity)
+      %p.name
+        = activity_title(activity)
+        = activity_project_link(activity.project)
       .body  
         = upload_link(upload.project, upload)
         = number_to_human_size(upload.size)
