--- a/app/views/comments/_comment.haml
+++ b/app/views/comments/_comment.haml
@@ -23,9 +23,8 @@
         - if comment.target_type == 'Task'
           = comment_task_status(comment)
         - if comment.hours?
-          %span.hours
-            = friendly_hours_value(comment.hours)
-        = activity_project_link(comment.project) unless comment.target.class == Project
+          %span.hours= friendly_hours_value(comment.hours)
+        = activity_project_link(comment.project) unless comment.target.is_a? Project
       .body.textilized
         ~ comment.body_html
       - if comment.uploads.any?
