--- a/app/views/notes/_actions.haml
+++ b/app/views/notes/_actions.haml
@@ -1,7 +1,9 @@
 %p.actions{ :style => "display: none" }
   %span
     = edit_note_link(note)
+    = loading_action_image("note_#{note.id}", true)
     = delete_note_link(note)
+    = loading_action_image("delete_note_#{note.id}", true)
 %p.actions.handle{ :style => "display: none;" }
   %span
     = drag_widget_handle(note)
