--- a/app/views/dividers/_new.haml
+++ b/app/views/dividers/_new.haml
@@ -1,4 +1,4 @@
-- remote_form_for [project,page,divider], :loading => show_loading_divider_form, :html => { :id => "new_divider_form", :style => 'display: none' } do |f|
+- form_for [project,page,divider], :html => { :id => "new_divider_form", :style => 'display: none' } do |f|
   = page_slot_fields("new_divider_form")
   .area
     = divider_fields(f)
