--- a/app/views/notes/_edit.haml
+++ b/app/views/notes/_edit.haml
@@ -1,4 +1,4 @@
-- remote_form_for [note.project,note.page,note], :loading => show_loading_note_form(note.id) do |f|
+- form_for [note.project,note.page,note] do |f|
   = note_fields(f)
   .submit{ :id => "note_submit_#{note.id}" }
     = f.submit t('.submit')
