Adding a link to Time-tracking's knowledge base

--- a/app/styles/_comments.sass
+++ b/app/styles/_comments.sass
@@ -98,6 +98,8 @@ form#new_comment
   p.error
     color: red
     font-weight: bold
+  .hours
+    padding-top: 10px
 
 form.edit_comment
   padding-bottom: 3px
