--- a/app/views/shared/_footer.haml
+++ b/app/views/shared/_footer.haml
@@ -4,6 +4,6 @@
     %li= mobile_link
     %li= help_link
   .copyright
-    Copyright &copy; 2010
+    Project collaboration by
     = link_to 'Teambox', 'http://www.teambox.com'
 
