Styles for People in a project

--- a/app/styles/_users.sass
+++ b/app/styles/_users.sass
@@ -238,15 +238,18 @@ div.upload_avatar
           font:
             weight: bold
             size: 12px
-      .person_header .actions
-        float: right
-        text-align: right
-        width: 5.5em
-        padding-top: 5px
-        a
-          +button
-          display: block
-          margin-bottom: 5px
+      .person_header
+        p
+          margin: 0
+        .actions
+          float: right
+          text-align: right
+          width: 5.5em
+          padding-top: 5px
+          a
+            +button
+            display: block
+            margin-bottom: 5px
       .edit_person
         padding: 10px
         background: $highlight
